<resources>
    <string name="app_name">mtls</string>
    <string name="server_name_label">Name</string>
    <string name="server_url_label">Server URL</string>
    <string name="organization_name_label">Organization Name</string>
    <string name="issuer_label">Certificate Issuer</string>
    <string name="invalid_url_message">Invalid URL</string>
    <string name="title_activity_server_detail">ServerDetail</string>
    <string name="state_label">State or Provence</string>
    <string name="email_label">Email Address</string>
    <string name="country_label">Country</string>
    <string name="save_button">Save</string>
    <string name="get_certificate">Get Certificate</string>
    <string name="edit_server_configuration">Edit Server Configuration</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Full Name</string>
    <string name="user_label">User</string>
    <string name="crypto_label">Crypto</string>
    <string name="openpgp_key_label">OpenPGP Key id</string>
    <string name="settings_page_title">Settings</string>
</resources>
